k8s/app_service.yml
apiVersion: v1
kind: Service
metadata:
  name: shopping-app-service1
spec:
  selector:
    app: shopping-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-app-service2
spec:
  selector:
    app: shopping-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: http
